--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  </main>
  <aside>
     <h2>España, Valencia</h2>
-    <img src="/images/ciudad-artes-ciencias-valencia.jpg" alt="">
+    <img src="./images/ciudad-artes-ciencias-valencia.jpg" alt="">
     <p>Valencia is a province of Spain that is characterized by combining historical and modern culture. It is also one of the largest cities in Spain.</p>
  </aside>
  <footer>
