--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
          <a href="#">Home</a>
          <a href="wwr/">White Water Rafting Website</a>
          <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+         <a href="https://linkedin.com">Linkedin</a>
+         <a href="https://facebook.com">Facebbok</a>
      </nav>
  </header>
  <main>
      <h1>Hector Javier Carballo | WDD 130</h1>
      <img src="./images/Javier carballo.jpg" alt="" width="200">
      <p>Hello, my name is Javier Carballo. I was born in Argentina, but I currently live in Spain. I have been married for 4 years and have a 3-year-old son.</p>
+     <ul class="box">
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/cordoba-argentina-temple?lang=spa" target="_blank">Cordoba Argentina Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/sydney-australia-temple?lang=spa" target="_blank">Sydney Australia Temple</a> </li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/madrid-spain-temple?lang=spa" target="_blank">Madrid Spain Temple</a></li>
+     </ul>
  </main>
- <aside>
+ <aside class="box">
     <h2>España, Valencia</h2>
     <img src="./images/ciudad-artes-ciencias-valencia.jpg" alt="">
     <p>Valencia is a province of Spain that is characterized by combining historical and modern culture. It is also one of the largest cities in Spain.</p>
@@ -31,4 +38,5 @@
  </footer>
  
 </body>
+<!--This page was modified on 10/02/2023-->
 </html>
