--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  </header>
  <main>
      <h1>Hector Javier Carballo | WDD 130</h1>
-     <img src="./images/Javier carballo.jpg" alt="" width="200">
+     <img src="./images/Javier-carballo.jpg" alt="" width="200">
      <p>Hello, my name is Javier Carballo. I was born in Argentina, but I currently live in Spain. I have been married for 4 years and have a 3-year-old son.</p>
      <ul class="box">
         <li><a href="https://www.churchofjesuschrist.org/temples/details/cordoba-argentina-temple?lang=spa" target="_blank">Cordoba Argentina Temple</a></li>
