--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,7 +44,7 @@
     <footer>
         <p> ©️2024 🌴 Rafting Site Document 🌴 Javier Carballo WDD 130 </p>
         <a href="https://www.facebook.com">
-        <img src="./images/icono facebook.png" alt="facebook">
+        <img src="./images/facebook.png" alt="facebook">
     </a>
         <a href="https://twitter.com/">
         <img src="./images/twitter.webp "  alt="twitter">
