--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Hector Javier Carballo | WDD 130</title>
+ <title>Javier Carballo | WDD 130</title>
  <link rel="stylesheet" href="./styles/styles.css">
  <meta name="description" content="Information about the website creator.">
  <meta name="author" content=" Hector Javier Carballo">
@@ -12,16 +12,17 @@
  <header>
      <nav>
          <a href="#">Home</a>
-         <a href="wwr/">White Water Rafting Website</a>
-         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+         <a href="wwr/">Rafting Website</a>
+         <a href="wwr/site-plan-rafting.html">Siteplan</a>
          <a href="https://linkedin.com">Linkedin</a>
-         <a href="https://facebook.com">Facebbok</a>
+         <a href="https://facebook.com">Facebook</a>
      </nav>
  </header>
+ <div class="grid">
  <main>
-     <h1>Hector Javier Carballo | WDD 130</h1>
+     <h1>Javier Carballo | WDD 130</h1>
      <img src="./images/Javier-carballo.jpg" alt="" width="200">
-     <p>Hello, my name is Javier Carballo. I was born in Argentina, but I currently live in Spain. I have been married for 4 years and have a 3-year-old son.</p>
+     <p>Hello, my name is Javier Carballo. I was born in Argentina, but I currently live in Spain. I have been married for 4 years and have a 3-year-old son. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellendus vero sapiente earum? Possimus fuga aliquam sapiente suscipit magnam in. Iusto aspernatur doloremque veniam explicabo mollitia eaque non vero sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat eveniet non labore repellendus voluptatum molestias eos itaque in amet ut, ratione doloremque ad at, maxime autem numquam consectetur assumenda! Vitae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam amet, neque mollitia magni velit veritatis voluptas quisquam ea. Aut exercitationem esse laborum ipsa nesciunt ut a alias magnam minima quia.</p>
      <ul class="box">
         <li><a href="https://www.churchofjesuschrist.org/temples/details/cordoba-argentina-temple?lang=spa" target="_blank">Cordoba Argentina Temple</a></li>
         <li><a href="https://www.churchofjesuschrist.org/temples/details/sydney-australia-temple?lang=spa" target="_blank">Sydney Australia Temple</a> </li>
@@ -31,8 +32,9 @@
  <aside class="box">
     <h2>España, Valencia</h2>
     <img src="./images/ciudad-artes-ciencias-valencia.jpg" alt="">
-    <p>Valencia is a province of Spain that is characterized by combining historical and modern culture. It is also one of the largest cities in Spain.</p>
+    <p>Valencia is a province of Spain that is characterized by combining historical and modern culture. It is also one of the largest cities in Spain. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae porro nobis vitae necessitatibus sint quam! Expedita distinctio doloremque nihil dolorum excepturi dolor nulla veritatis, ducimus perferendis aperiam? Tempora, dolor ad?</p>
  </aside>
+</div>
  <footer>
  <p> &copy; 😃Javier Carballo 2023 😃 </p>
  </footer>
