--- a/quiz.html
+++ b/quiz.html
@@ -27,7 +27,7 @@
                     <option value="Others">Others</option>                   
                 </select>
                 <label for="q4"> What is the number in the margin-bottom? margin: 2px 1em 0 auto;</label>
-                <input type="number" id="q4" name="q4"/>
+                <input type="number" id="q4" name="q4">
                 <button type="submit">Enviar formulario</button>
                 
             </fieldset>
